--- a/2.DynamoCraft.UI/src/app/components/nav-bar/nav-bar.component.html
+++ b/2.DynamoCraft.UI/src/app/components/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
             </a>
             <ul class="nav col-12 col-xl-auto me-lg-auto mb-2 d-flex justify-content-center mb-md-0">
                 <li>
-                    <a class="nav-link col-12 d-flex justify-content-center" routerLink="/home">Recherche</a>
+                    <a class="nav-link col-12 d-flex justify-content-center" routerLink="/recherche">Recherche</a>
                 </li>
                 <li>
                     <a class="nav-link col-12 d-flex justify-content-center" routerLink="/top10">Top 10</a>
