--- a/2.DynamoCraft.UI/src/app/components/home/home.component.html
+++ b/2.DynamoCraft.UI/src/app/components/home/home.component.html
@@ -1,43 +1,40 @@
-<div class="container">
+<div class="container min-vh-75 d-flex flex-column justify-content-center align-items-center">
+    <!-- Hero Section -->
     <div class="hero text-center py-5 banner-image col-lg-12">
-        <h1 class="display-3">Bienvenue sur DynamoCraft</h1>
-        <p class="lead d-flex justify-content-center">Explore des mods uniques, créations, et partage ton travail!</p>
+        <h1 class="display-3 font-dc text-white">Bienvenue sur DynamoCraft</h1>
     </div>
 
-    <div class="row">
+    <!-- Cards Section -->
+    <div class="row w-100 justify-content-center mt-5">
         <div class="col-sm-12 col-md-4 mb-5">
-            <div class="card-large card-background mt-5">
-                <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-center font-dc">Créativités</h5>
+            <div class="card-large shadow-lg card-hover couleur-main p-3">
+                <div class="card-body text-center">
+                    <h5 class="card-title font-dc text-white">Créativités</h5>
                     <p class="card-text text-black">Explorez une variété de modèles uniques, allant des œuvres d'art aux
-                        gadgets
-                        innovants. Téléchargez-les instantanément et donnez vie à vos propres idées. Notre plateforme
-                        vous offre un accès illimité à une multitude de designs créés par des passionnés de l'impression
-                        3D.</p>
+                        gadgets innovants.</p>
+                    <a href="#" class="btn btn-light font-dc">Voir plus</a>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-12 col-md-4 mb-5">
-            <div class="card-large card-background mt-5">
-                <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-center font-dc">Partages</h5>
-                    <p class="card-text text-black">Sur notre plateforme, vous avez la possibilité de partager vos
-                        propres modèles
-                        d'impression 3D avec une communauté mondiale. Publiez vos créations, obtenez des retours
-                        constructifs et inspirez d'autres utilisateurs avec votre talent unique.</p>
+            <div class="card-large shadow-lg card-hover couleur-main p-3">
+                <div class="card-body text-center">
+                    <h5 class="card-title font-dc text-white">Partages</h5>
+                    <p class="card-text text-black">Publiez vos créations et inspirez d'autres utilisateurs avec votre
+                        talent unique.</p>
+                    <a href="#" class="btn btn-light font-dc">Partager</a>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-12 col-md-4 mb-5">
-            <div class="card-large card-background mt-5">
-                <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-center font-dc">Echanges</h5>
-                    <p class="card-text text-black">Ne vous contentez pas de créer, engagez-vous avec la communauté en
-                        réagissant
-                        aux impressions des autres utilisateurs. Laissez des commentaires, donnez des conseils et
-                        partagez vos astuces pour améliorer encore plus les créations.</p>
+            <div class="card-large shadow-lg card-hover couleur-main p-3">
+                <div class="card-body text-center">
+                    <h5 class="card-title font-dc text-white">Échanges</h5>
+                    <p class="card-text text-black">Engagez-vous avec la communauté et partagez vos astuces pour
+                        améliorer les créations.</p>
+                    <a href="#" class="btn btn-light font-dc">Participer</a>
                 </div>
             </div>
         </div>
