--- a/2.DynamoCraft.UI/src/app/components/top-10/top-10.component.html
+++ b/2.DynamoCraft.UI/src/app/components/top-10/top-10.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container min-vh-75">
     <h2 class="text-center text-warning mb-4">Top 10 Projets Les Plus Likés</h2>
     <div class="row g-4">
         @for (projet of top10LikedProjects; track projet.id; let i = $index) {
