--- a/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
+++ b/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid d-flex justify-content-center">
+<div class="container-fluid d-flex justify-content-center min-vh-75">
     <div class="col-9 mt-5">
         <h1 class="font-dc d-flex justify-content-center mb-5">Nouveautés</h1>
         <div class="row g-4 d-flex justify-content-center">
