--- a/2.DynamoCraft.UI/src/app/components/footer/footer.component.html
+++ b/2.DynamoCraft.UI/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
         <ul class="list-inline">
             <li class="list-inline-item"><a href="#" class="text-white">Politique de confidentialité</a></li>
             <li class="list-inline-item"><a href="#" class="text-white">Conditions d'utilisation</a></li>
-            <li class="list-inline-item"><a href="#" class="text-white">Contact</a></li>
+            <li class="list-inline-item"><a routerLink="/contact" class="text-white">Contact</a></li>
         </ul>
     </div>
 </footer>
