--- a/2.DynamoCraft.UI/src/app/components/footer/footer.component.html
+++ b/2.DynamoCraft.UI/src/app/components/footer/footer.component.html
@@ -2,8 +2,9 @@
     <div class="container">
         <p class="mb-0 d-flex justify-content-center">&copy; 2024 DynamoCraft. Tous droits réservés.</p>
         <ul class="list-inline">
-            <li class="list-inline-item"><a href="#" class="text-white">Politique de confidentialité</a></li>
-            <li class="list-inline-item"><a href="#" class="text-white">Conditions d'utilisation</a></li>
+            <li class="list-inline-item"><a routerLink="/politiqueConfidentialite" class="text-white">Politique de confidentialité</a></li>
+            <li class="list-inline-item"><a routerLink="/conditionsUtilisation" class="text-white">Conditions d'utilisation</a></li>
+            <li class="list-inline-item"><a routerLink="/quiSommesnous" class="text-white">Qui somme nous</a></li>
             <li class="list-inline-item"><a routerLink="/contact" class="text-white">Contact</a></li>
         </ul>
     </div>
