--- a/2.DynamoCraft.UI/src/styles.scss
+++ b/2.DynamoCraft.UI/src/styles.scss
@@ -423,6 +423,10 @@ ul.nav .nav-link {
     min-height: 85vh;
 }
 
+.min-vh-90 {
+    min-height: 90vh;
+}
+
 /* Styles de la section Hero */
 .hero {
     background-size: cover;
@@ -495,15 +499,18 @@ ul.nav .nav-link {
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 3rem; /* Augmenté pour une meilleure visibilité */
+    font-size: 3rem;
+    /* Augmenté pour une meilleure visibilité */
     border-radius: 15px;
     cursor: pointer;
-    opacity: 0; /* Initialement invisible */
+    opacity: 0;
+    /* Initialement invisible */
     transition: opacity 0.3s ease;
 }
 
 .profile-image-wrapper:hover .overlay {
-    opacity: 1; /* Visible uniquement au survol */
+    opacity: 1;
+    /* Visible uniquement au survol */
 }
 
 .profile-image-wrapper:hover .profile-image {
@@ -511,7 +518,8 @@ ul.nav .nav-link {
 }
 
 .overlay i {
-    font-size: 3rem; /* Taille augmentée pour une meilleure visibilité */
+    font-size: 3rem;
+    /* Taille augmentée pour une meilleure visibilité */
     color: white;
 }
 
@@ -547,4 +555,77 @@ ul.nav .nav-link {
     &::placeholder {
         color: black;
     }
+}
+
+// Custom Dark Background and Text Colors
+.bg-custom-dark {
+    background-color: $couleur-fond-2;
+    color: #ffffff;
+}
+
+.text-warning {
+    color: #ffc107 !important;
+}
+
+.container {
+    border-radius: 10px;
+    padding: 2rem;
+}
+
+// Custom Rounded Corners for Sections
+.rounded-custom {
+    border-radius: 25px; // Rounded corners for modern look
+    padding: 30px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); // Soft shadow for depth
+}
+
+// Section Spacing
+h2 {
+    font-family: 'ethnocentric', sans-serif;
+    font-weight: bold;
+}
+
+p {
+    line-height: 1.6;
+    font-size: 1.1rem;
+    margin-bottom: 1.5rem;
+}
+
+.container-fluid {
+    padding: 0;
+}
+
+.rounded-custom {
+    border-radius: 15px;
+}
+
+.accordion-button {
+    background-color: rgb(25, 25, 25);
+    color: rgb(227, 178, 0);
+    font-family: 'ethnocentric', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
+
+.accordion-button:not(.collapsed) {
+    color: #fff;
+    background-color: rgb(35, 35, 35);
+    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+}
+
+.accordion-body {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #f8f9fa;
+    background-color: rgb(45, 45, 45);
+}
+
+h2,
+h3 {
+    font-family: 'ethnocentric', sans-serif;
+    text-transform: uppercase;
+}
+
+.text-warning {
+    color: rgb(227, 178, 0) !important;
 }
