--- a/2.DynamoCraft.UI/src/app/components/nav-bar/nav-bar.component.html
+++ b/2.DynamoCraft.UI/src/app/components/nav-bar/nav-bar.component.html
@@ -24,6 +24,7 @@
                 <ul class="dropdown-menu text-small dropdown-menu-end">
                     <!-- Liens dépendants de l'état de connexion -->
                     <ng-container *ngIf="isConnected(); else guestLinks">
+                        <li><a class="dropdown-item" routerLink="/utilisateur/profil">Mon Profil</a></li>
                         <li><a class="dropdown-item" (click)="logout()">Déconnexion</a></li>
                     </ng-container>
                     <ng-template #guestLinks>
