--- a/2.DynamoCraft.UI/src/app/components/categorie/categorie.component.html
+++ b/2.DynamoCraft.UI/src/app/components/categorie/categorie.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid d-flex justify-content-center">
-    <div class="col-7 mt-5">
+<div class="container d-flex justify-content-center">
+    <div class="col-12">
         <h1 class="font-dc d-flex justify-content-center mb-5">Catégories</h1>
         <div class="row d-flex justify-content-center">
             @for (categorie of categories; track $index) {
             <div class="col-sm-6 col-md-4 col-lg-3 mb-5 d-flex align-items-center justify-content-center">
                 <a routerLink="/home">
-                    <div class="card-large">
+                    <div class="card-medium">
                         <img src="assets/png/Categories/{{categorie.nom}}.png" class="card-img-top"
                             alt="{{categorie.nom}}">
                         <div class="card-img-overlay">
