--- a/2.DynamoCraft.UI/src/app/components/recherche/recherche.component.html
+++ b/2.DynamoCraft.UI/src/app/components/recherche/recherche.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container min-vh-75">
     <h2 class="text-center text-warning mb-4">Recherche de Projets</h2>
 
     <!-- Barre de recherche -->
@@ -12,38 +12,38 @@
     </div>
 
     <!-- Affichage des projets -->
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 justify-content-center">
         @for (projet of projects; track projet.id) {
-        <div class="col">
-            <div class="card h-100 text-center shadow-sm border-0 bg-dark rounded m-3">
-                <a routerLink="/projet/{{ projet.id }}" class="text-decoration-none">
-                    @if (projet.ImageProjet && projet.ImageProjet.length > 0) {
-                    <img [src]="url + projet.ImageProjet[0].nom" class="card-img-top rounded" alt="Image du projet"
+        <div class="col d-flex align-items-stretch">
+            <div class="card h-100 text-center shadow-sm border-0 couleur-fond-2 card-hover rounded m-3">
+                <a routerLink="/projet/{{ projet.id }}" class="text-decoration-none w-100">
+                    @if (projet.imageProjet && projet.imageProjet.length > 0) {
+                    <img [src]="url + projet.imageProjet[0].nom" class="card-img-top rounded" alt="Image du projet"
                         style="width: 100%; height: 200px; object-fit: cover;">
-                        <h5 class="card-title text-white text-center font-dc">{{ projet.nom | slice: 0: 20 }}...</h5>
                     } @else {
                     <p class="text-muted">Pas d'image disponible</p>
                     }
+                    <h5 class="card-title text-white text-center font-dc mt-3">{{ projet.nom | slice: 0: 20 }}...</h5>
                 </a>
             </div>
         </div>
         }
     </div>
 
-<!-- Pagination -->
-<div class="row mt-4 mb-5">
-    <nav aria-label="Pagination" class="d-flex justify-content-center">
-        <ul class="pagination pagination-lg">
-            <li class="page-item" [class.disabled]="page === 1">
-                <button class="page-link shadow-sm" (click)="prevPage()">Précédent</button>
-            </li>
-            <li class="page-item disabled">
-                <span class="page-link shadow-sm bg-dark text-white">Page {{ page }} sur {{ totalPages }}</span>
-            </li>
-            <li class="page-item" [class.disabled]="page === totalPages">
-                <button class="page-link shadow-sm" (click)="nextPage()">Suivant</button>
-            </li>
-        </ul>
-    </nav>
-</div>
+    <!-- Pagination -->
+    <div class="row mt-5">
+        <nav aria-label="Pagination" class="d-flex justify-content-center">
+            <ul class="pagination pagination-lg">
+                <li class="page-item" [class.disabled]="page === 1">
+                    <button class="page-link shadow-sm" (click)="prevPage()">Précédent</button>
+                </li>
+                <li class="page-item disabled">
+                    <span class="page-link shadow-sm bg-dark text-white">Page {{ page }} sur {{ totalPages }}</span>
+                </li>
+                <li class="page-item" [class.disabled]="page === totalPages">
+                    <button class="page-link shadow-sm" (click)="nextPage()">Suivant</button>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </div>
