--- a/2.DynamoCraft.UI/src/styles.scss
+++ b/2.DynamoCraft.UI/src/styles.scss
@@ -629,3 +629,79 @@ h3 {
 .text-warning {
     color: rgb(227, 178, 0) !important;
 }
+
+.profile-image-wrapper {
+    position: relative;
+    width: 200px;
+    height: 200px;
+}
+
+.profile-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    /* Carré avec des coins arrondis */
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.settings-btn {
+    top: 20px;
+    right: 20px;
+    background-color: #343a40;
+    /* Couleur sombre */
+    border-radius: 15%;
+    padding: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* Légère ombre */
+    z-index: 10;
+}
+
+.settings-btn:hover {
+    background-color: #495057;
+    /* Changement de couleur au survol */
+}
+
+.profile-image-wrapper {
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+
+.profile-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    /* Coins arrondis */
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.6);
+    border-radius: 15px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.profile-image-wrapper:hover .overlay {
+    opacity: 1;
+}
+
+.btn-dark {
+    background-color: #212529;
+    border: none;
+    color: #fff;
+    transition: background-color 0.3s ease;
+}
+
+.btn-dark:hover {
+    background-color: #343a40;
+}
