--- a/2.DynamoCraft.UI/src/app/components/nav-bar/nav-bar.component.html
+++ b/2.DynamoCraft.UI/src/app/components/nav-bar/nav-bar.component.html
@@ -30,6 +30,7 @@
                     <ng-template #guestLinks>
                         <li><a class="dropdown-item" routerLink="/auth/login">Login</a></li>
                         <li><a class="dropdown-item" routerLink="/auth/register">Register</a></li>
+                        <li><a class="dropdown-item" routerLink="/projet/ajout">Ajouter projet</a></li>
                     </ng-template>
                 </ul>
             </div>
