--- a/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
+++ b/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
@@ -4,9 +4,9 @@
         @for (nouveaute of nouveautes; track nouveaute.id) {
         <div class="col d-flex align-items-stretch">
             <a routerLink="/home" class="text-decoration-none w-100">
-                <div class="card h-100 text-center shadow-sm border-0 couleur-main card-hover rounded m-3">
+                <div class="card h-100 text-center shadow-sm border-0 card-hover rounded m-3">
                     @if (nouveaute.imageProjet && nouveaute.imageProjet.length > 0) {
-                    <img [src]="url + nouveaute.imageProjet[0].nom" class="card-img-top rounded" alt="Image du projet"
+                    <img [src]="url + nouveaute.imageProjet[0].nom" class="rounded" alt="Image du projet"
                         style="width: 100%; height: 200px; object-fit: cover;">
                     } @else {
                     <p class="text-muted">Pas d'image disponible</p>
